modules/aws/dns-c2/security_group.tf
terraform {
  required_version = ">= 0.10.0"
}

data "external" "get_public_ip" {
  program = ["bash", "./scripts/get_public_ip.sh" ]
}

resource "aws_security_group" "dns-c2" {
  name = "dns-c2"
  description = "Security group created by Red Baron"
  vpc_id = "${var.vpc_id}"

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    /*
    cidr_blocks = ["${linode_linode.dns-rdir.ip_address}/32",
                   "${var.my_ip}/32"]
    */
    cidr_blocks = ["0.0.0.0/0"]  
    //cidr_blocks = ["${data.external.get_public_ip.result["ip"]}/32"]
  }
  ingress {
    from_port = 53
    to_port = 53
    protocol = "udp"
    /*
    cidr_blocks = ["${linode_linode.dns-rdir.ip_address}/32",
                   "${var.my_ip}/32"]
    */

    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 53
    to_port = 53
    protocol = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
